# kreogl

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.md  LICENSE  Object.hpp  README.md  Window.cpp  Window.hpp  Window.md  World.cpp  World.hpp  World.md  kreogl.cpp  kreogl.hpp  vcpkg.json
.github/workflows/: build.yml
example/: CMakeLists.txt  complex_main.cpp  main.cpp  simple_main.cpp
impl/: DrawParams.hpp  GBuffer.cpp  GBuffer.hpp  GBuffer.md  Viewport.cpp  Viewport.hpp  kreogl.cpp  kreogl.hpp
impl/RAII/: Buffer.md  ScopedBindFramebuffer.hpp  UIntSwapper.hpp  UIntSwapper.md  VertexArray.hpp  VertexArray.md
impl/shaders/: Shader.cpp  Shader.hpp  Shader.md  ShaderStep.hpp  ShaderStep.md  ShadowMapShader.cpp  ShadowMapShader.hpp  Singleton.md  Uniform.md  VertexSpecification.cpp  VertexSpecification.hpp  VertexSpecification.md
impl/shaders/ApplyTransparency/: ApplyTransparencyGLSL.md
impl/shaders/CascadedShadowMap/: CascadedShadowMapGLSL.cpp  CascadedShadowMapGLSL.hpp  CascadedShadowMapGLSL.md
impl/shaders/DirectionalLight/: DirectionalLightGLSL.cpp  DirectionalLightGLSL.hpp  DirectionalLightGLSL.md  DirectionalLightShader.cpp  DirectionalLightShader.hpp  DirectionalLightShader.md
impl/shaders/PositionEmptyNormalColor/: PositionEmptyNormalColorGLSL.cpp  PositionEmptyNormalColorGLSL.md  PositionEmptyNormalColorShader.hpp
impl/shaders/Quad/: QuadGLSL.cpp
impl/shadowMaps/: CascadedShadowMap.cpp  CascadedShadowMap.hpp  ShadowCube.md  ShadowMap.cpp  ShadowMap.hpp  ShadowMap.md
kreogl/: Camera.cpp  Camera.hpp  DebugElement.hpp  DebugElement.md  Object.hpp  Object.md  Sprite.hpp  Sprite.md  Text.hpp  Text.md  Window.cpp  Window.hpp  Window.md  World.cpp  World.hpp  World.md  camera.cpp  camera.hpp  camera.md  debug_element.hpp  debug_element.md  object.hpp  object.md  sprite.hpp  sprite.md  text.hpp  text.md  window.cpp  window.hpp  window.md  world.cpp  world.hpp  world.md
kreogl/animation/: AnimatedModel.hpp  AnimatedModel.md  AnimatedObject.cpp  AnimatedObject.hpp  AnimatedObject.md  Animation.hpp  Animation.md  AnimationFile.hpp  AnimationFile.md  AnimationModel.hpp  AnimationModel.md  Skeleton.hpp  Skeleton.md  SkeletonModel.hpp  SkeletonModel.md  animated_model.hpp  animated_model.md  animated_object.cpp  animated_object.hpp  animated_object.md  animation.hpp  animation.md  animation_file.hpp  animation_file.md  animation_model.hpp  animation_model.md  skeleton.hpp  skeleton.md  skeleton_model.hpp  skeleton_model.md
kreogl/animation/AssImp/: AssImpAnimatedModel.hpp  AssImpAnimationLoader.cpp  AssImpAnimationLoader.hpp  AssImpAnimationModel.cpp  AssImpAnimationModel.hpp  AssImpModelLoader.cpp  AssImpModelLoader.hpp  AssImpSkeletonModel.hpp
kreogl/debug/: DebugElement.hpp  DebugElement.md
kreogl/impl/: DefaultConstructors.hpp  DefaultConstructors.md  DrawParams.hpp  DrawParams.md  GBuffer.cpp  GBuffer.hpp  GBuffer.md  Viewport.cpp  Viewport.hpp  Viewport.md  default_constructors.hpp  default_constructors.md  draw_params.hpp  draw_params.md  gbuffer.cpp  gbuffer.hpp  gbuffer.md  kreogl.cpp  kreogl.hpp  kreogl.md  kreogl_init.cpp  kreogl_init.hpp  kreogl_init.md  kreogl_profiling.hpp  kreogl_profiling.md  viewport.cpp  viewport.hpp  viewport.md
kreogl/impl/RAII/: Buffer.hpp  FrameBuffer.hpp  FrameBuffer.md  ScopedBindFramebuffer.hpp  ScopedBindFramebuffer.md  ScopedGLFeature.hpp  ScopedGLFeature.md  Texture.hpp  Texture.md  UIntSwapper.hpp  VertexArray.hpp  WindowHandle.hpp  WindowHandle.md
kreogl/impl/raii/: buffer.hpp  buffer.md  frame_buffer.hpp  frame_buffer.md  scoped_bind_framebuffer.hpp  scoped_bind_framebuffer.md  scoped_gl_feature.hpp  scoped_gl_feature.md  texture.hpp  texture.md  uint_swapper.hpp  uint_swapper.md  vertex_array.hpp  vertex_array.md  window_handle.hpp  window_handle.md
kreogl/impl/shaders/: Shader.cpp  Shader.hpp  Shader.md  ShaderPipeline.cpp  ShaderPipeline.hpp  ShaderPipeline.md  ShaderStep.hpp  Singleton.hpp  Uniform.hpp  VertexSpecification.cpp  VertexSpecification.hpp  VertexSpecification.md  shader.cpp  shader.hpp  shader.md  shader_pipeline.cpp  shader_pipeline.hpp  shader_pipeline.md  shader_step.hpp  shader_step.md  singleton.hpp  singleton.md  uniform.hpp  uniform.md  vertex_specification.cpp  vertex_specification.hpp  vertex_specification.md
kreogl/impl/shadowMaps/: CascadedShadowMap.cpp  CascadedShadowMap.hpp  CascadedShadowMap.md  ShadowCube.cpp  ShadowCube.hpp  ShadowMap.cpp  ShadowMap.hpp
kreogl/impl/shadow_maps/: cascaded_shadow_map.cpp  cascaded_shadow_map.hpp  cascaded_shadow_map.md  shadow_cube.cpp  shadow_cube.hpp  shadow_cube.md  shadow_map.cpp  shadow_map.hpp  shadow_map.md
kreogl/impl/shapes/: Box.cpp  Box.hpp  Box.md  Line.cpp  Line.hpp  Line.md  Quad.cpp  Quad.hpp  Quad.md  Sphere.cpp  Sphere.hpp  TexturedQuad.cpp  TexturedQuad.hpp  TexturedQuad.md  box.cpp  box.hpp  box.md  line.cpp  line.hpp  line.md  quad.cpp  quad.hpp  quad.md  sphere.cpp  sphere.hpp  sphere.md  textured_quad.cpp  textured_quad.hpp  (+1 more)
kreogl/lights/: DirectionalLight.cpp  DirectionalLight.hpp  DirectionalLight.md  Light.hpp  Light.md  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp  VolumetricLightingParams.hpp  VolumetricLightingParams.md  directional_light.cpp  directional_light.hpp  directional_light.md  light.hpp  light.md  point_light.cpp  point_light.hpp  point_light.md  spot_light.cpp  spot_light.hpp  spot_light.md  volumetric_lighting_params.hpp  volumetric_lighting_params.md
kreogl/model/: Model.cpp  Model.hpp  Model.md  ModelData.hpp  ModelData.md  model.cpp  model.hpp  model.md  model_data.hpp  model_data.md
kreogl/shapes/: Line.cpp  Quad.cpp  Sphere.cpp  Sphere.md
kreogl/texture/: ImageTexture.cpp  ImageTexture.hpp  ImageTexture.md  SkyboxTexture.cpp  SkyboxTexture.hpp
lights/: DirectionalLight.cpp  DirectionalLight.hpp  Light.hpp  Light.md  PointLight.hpp  PointLight.md  SpotLight.cpp  SpotLight.hpp  SpotLight.md
model/: Model.cpp  Model.hpp  ModelData.cpp  ModelData.hpp
model/PolyVox/: PolyVoxModel.hpp  PolyVoxModel.inl
shapes/: Quad.cpp  Quad.hpp
(+320 files in other folders)
